src/sass/Footer.scss
.footer {
  height: 140px;
  padding: 20px;
  box-sizing: border-box;
  background-color: black;
  color: white;
  font-size: 13px;
  font-weight: $light;
  .contact {
    display: flex;
    height: 100%;
    width: 100%;
    flex-direction: column;
    flex-wrap: wrap;
    letter-spacing: 1px;
    justify-content: flex-end;
    align-items: flex-start;
    & > div {
      padding-bottom: 10px;
    }
    .right, .copyright {
      align-self: flex-end;
    }
  }
}

@media screen and (min-width: $tablet-min) {
  .footer {
    height: 309px;
    padding: 53px;
    .contact {
      & > div {
        padding-bottom: 14px;
      }
      .right {
        align-self: left;
      }
    }
  }
}

@media screen and (min-width: $desktop-min) {
  .footer {
    padding: 53px 113px;
  }
}

